<resources>
    <string name="app_name">TutorsApp</string>
    <string name="app_for_tutors">App for Tutors</string>
    <string name="app_description">Manage your schedules efficiently with the help of Tutors App</string>
    <string name="btn_get_started">Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_onboard">Welcome Onboard!!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_batch_details">Enter Batch Details</string>
    <string name="batch_name">Batch Name</string>
    <string name="course_name">Course Name</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create_batch">Create Batch</string>
    <string name="enroll_student">Enroll Student</string>
    <string name="enter_student_details">Enter Student Details</string>
    <string name="student_full_name">Full Name</string>
    <string name="student_age">Age</string>
    <string name="parent_guardian_name">Parent/Guardian Name</string>
    <string name="student_contact_number">Contact Number</string>
    <string name="manage_batches">Manage Batches</string>
    <string name="manage_students">Manage Students</string>
    <string name="my_students_list">My Students List</string>
    <string name="course_batch_list">Batch List</string>
    <string name="number_of_classes_per_week">Number of classes per week</string>
    <string name="create_batches">Create Batches</string>
    <string name="course_fee">Course Fee</string>
</resources>