<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_for_tutors"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/iv_splash_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:src="@drawable/tutorapp_splashscreen_image"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/btn_get_started"
        android:textStyle="bold" />

</LinearLayout>